# web-multimedia-lab

./: .gitignore  README.md
fast-api-chat/: README.md
fast-api-chat/backend/: main.py
fast-api-chat/frontend/: index.html  package-lock.json  package.json
fast-api-flow-app/: README.md  docker-compose.yml
fast-api-flow-app/backend/: .dockerignore  .env.example  Dockerfile  requirements.txt
fast-api-flow-app/frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json
fast-api-p2p-video/: README.md
fast-api-p2p-video/backend/: main.py
fast-api-p2p-video/frontend/: index.html  package-lock.json  package.json
fast-api-sign-to-text/: .gitignore  README.md  docker-compose.yml  package-lock.json
fast-api-sign-to-text/backend/: Dockerfile  README.md  requirements.txt
fast-api-sign-to-text/contracts/: README.md  caption.response.schema.json  error.response.schema.json  frame.chunk.schema.json  session.start.schema.json
fast-api-sign-to-text/frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
fast-api-sign-to-text/ml/: README.md  extract_keypoints.py  requirements-extract.txt  requirements-train.txt  train.py
fast-api-text-to-sign/: README.md  docker-compose.yml
fast-api-text-to-sign/backend/: requirements.txt
fast-api-text-to-sign/frontend/: index.html  (+2 more)
fast-api-websockets/: .gitignore
fast-api-websockets/fastapi-websocket-project/: README.md  pyproject.toml
fast-api-websockets/fastapi-websocket-project/app/: main.py
fast-api-websockets/fastapi-websocket-project/tests/: test_websocket.py
(+40 files in other folders)
